<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.imbaseonxmpp.activity.MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#60c4f5"
        android:gravity="center"
        android:text="@string/str_main_chat"
        android:textColor="#fff"
        android:textSize="24sp" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#fff"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_chat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/selector_rb_chat"
                android:gravity="center"
                android:text="@string/str_main_bchat"
                android:textColor="#272636" />

            <RadioButton
                android:id="@+id/rb_contact"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/selector_rb_contact"
                android:gravity="center"
                android:text="@string/str_main_bcontact"
                android:textColor="#272636" />


        </RadioGroup>

    </LinearLayout>

</LinearLayout>
